--- a/src/app/SiteHeader.module.css
+++ b/src/app/SiteHeader.module.css
@@ -1,8 +1,12 @@
-.btngroup{
+.btngroup {
   color: #343434;
   margin-top: 2rem;
 }
 
 .site-header {
   width: 100%;
+}
+
+.logo {
+  font-weight: 900;
 }
