relocation of images and landing page made me

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@ body {
 }
 
 .bg {
-  background-image: url('/eteyen.png');
+  background-image: url('/personal/eteyen.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
