restaurant cards made (T_T)

--- a/src/app/resturants.module.css
+++ b/src/app/resturants.module.css
@@ -1,18 +1,9 @@
-.btngroup {
-    color: #343434;
-    margin-top: 2rem;
-}
-
-.site-header {
-    width: 100%;
-}
-
 .logo {
     font-weight: 900;
 }
 
 .bg {
-    background-image: url('/food.jpg');
+    background-image: url('/balloons.jpg');
     background-size: cover;
     background-position: center;
     border-radius: 0.6rem;
@@ -21,6 +12,17 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill,
-            minmax(400px, 1fr));
-    grid-gap: 10px
+            minmax(400px, 20rem));
+    grid-gap: 10px;
+    margin-left: 5rem;
+}
+
+@media (max-width: 640px) {
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill,
+                minmax(100px, 40rem));
+        grid-gap: 12px;
+        margin-top: 2rem;
+    }
 }
