ui change and text alignment

--- a/src/app/Signup.module.css
+++ b/src/app/Signup.module.css
@@ -6,8 +6,31 @@
 }
 
 .bg1 {
-    background-image: url('/personal/bgright.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-color: #13362f;
+}
+
+.shake {
+    animation: horizontal-shaking 2s ease-in-out infinite
+}
+
+@keyframes horizontal-shaking {
+    0% {
+        transform: translateX(0)
+    }
+
+    25% {
+        transform: translateX(5px)
+    }
+
+    50% {
+        transform: translateX(-5px)
+    }
+
+    75% {
+        transform: translateX(5px)
+    }
+
+    100% {
+        transform: translateX(0)
+    }
 }
